1-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecart-db
  labels:
    app: ecartdb
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: ecartdb
  template:
    metadata:
      labels:
        appdb: ecartdb
    spec:
      volumes:
        - name: voldb
          emptyDir: {}
        - name: demo
          emptyDir: {}
      containers:
      - name: ecart-db
        image: quay.io/gauravkumar9130/ecart-microservices:db
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: voldb
          mountPath: /var/lib/mysql
        - name: demo
          mountPath: /docker-entrypoint-initdb.d
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: ecartdb
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    appdb: ecartdb
