3-catalogue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: app
        image: quay.io/gauravkumar9130/ecart-microservices:catalogue
        ports:
        - containerPort: 5001

---

apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
  selector:
    app: catalogue
