6-orders.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: app
        image: quay.io/gauravkumar9130/ecart-microservices:orders
        ports:
        - containerPort: 5004

---

apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  ports:
  - port: 5004
    targetPort: 5004
    protocol: TCP
  selector:
    app: orders
