7-payment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: app
        image: quay.io/gauravkumar9130/ecart-microservices:payment
        ports:
        - containerPort: 5005

---

apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: payment
spec:
  ports:
  - port: 5005
    targetPort: 5005
    protocol: TCP
  selector:
    app: payment
