8-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: ecart-ingress
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - http:
    paths:
    - path: /
      pathType: Exact
      backend:
       service:
        name: frontend
        port:
         number: 5000
